# task_iterator

./: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Controller.cpp  Controller.h  FileIterator.cpp  FileIterator.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  iterator_ui.h  iterator_ui.ui
tests/: CMakeLists.txt  tests.cpp
